# Fluttida

./: .gitignore  README.md  SSLPinning_plan.md  accept_all_certs.js  intercept_dartio.js  main.dart
.github/workflows/: android-build-test.yml  android-release.yml  android-unsigned.yml  disabled-ios-unsigned.yml  disabled-release-build.yml  ios-unsigned.yml  release-android-only.yml  release-build.yml
docs/: index.html
example_app/fluttida/: .gitignore  README.md  pubspec.yaml
example_app/fluttida/.github/workflows/: ios-unsigned.yml
example_app/fluttida/android/: README-libcurl.md  key.properties.template
example_app/fluttida/android/app/: build.gradle.kts  proguard-rules.pro
example_app/fluttida/android/app/src/main/cpp/: CMakeLists.txt  native_http.cpp
example_app/fluttida/ios/: Podfile
example_app/fluttida/ios/Flutter/: Release.xcconfig
example_app/fluttida/ios/Runner/: AppDelegate.swift  Info.plist  LegacyCFURLConnection.h  LegacyCFURLConnection.m  NativeHttp.h  NativeHttp.mm  Runner-Bridging-Header.h
example_app/fluttida/ios/Runner.xcodeproj/: project.pbxproj
example_app/fluttida/lib/: lab_screen.dart  main.dart  pinning_config.dart  settings_page.dart  versions.dart
example_app/fluttida/lib/pinning/: global_http_override.dart
example_app/fluttida/lib/stacks/: stacks_impl.dart
example_app/fluttida/linux/: CMakeLists.txt
example_app/fluttida/linux/runner/: my_application.cc
example_app/fluttida/web/: index.html  manifest.json
example_app/fluttida/windows/: CMakeLists.txt
example_app/fluttida/windows/runner/: Runner.rc  (+1 more)
frida_detect_engine/: check_cupertino.js  check_dartio.js  check_nsurl.js  check_webview.js
(+11 files in other folders)
